--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-label": "^2.1.8",
         "@supabase/supabase-js": "^2.49.1",
         "axios": "^1.7.9",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "lucide-react": "^0.474.0",
         "next": "^16.1.6",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@types/node": "^20.17.12",
