--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "dependencies": {
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-label": "^2.1.8",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@supabase/supabase-js": "^2.49.1",
         "axios": "^1.7.9",
         "class-variance-authority": "^0.7.1",
