--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,29 @@
-version: "3.8"
+# version: "3.8"
 
-services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    env_file:
-      - ./backend/.env
-    volumes:
-      - ./backend:/app  # Hot reload in dev
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    restart: unless-stopped
+# services:
+#   backend:
+#     build:
+#       context: ./backend
+#       dockerfile: Dockerfile
+#     ports:
+#       - "8000:8000"
+#     env_file:
+#       - ./backend/.env
+#     volumes:
+#       - ./backend:/app  # Hot reload in dev
+#     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+#     restart: unless-stopped
 
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "3000:3000"
-  #   env_file:
-  #     - ./frontend/.env.local
-  #   depends_on:
-  #     - backend
-  #   restart: unless-stopped
+#   # frontend:
+#   #   build:
+#   #     context: ./frontend
+#   #     dockerfile: Dockerfile
+#   #   ports:
+#   #     - "3000:3000"
+#   #   env_file:
+#   #     - ./frontend/.env.local
+#   #   depends_on:
+#   #     - backend
+#   #   restart: unless-stopped
+
+
